syntax = "proto3";

package users;

import "github.com/gogo/protobuf/gogoproto/gogo.proto";
import "google/protobuf/timestamp.proto";

option (gogoproto.populate_all) = true;

service Users {
    // LookupOrg authenticates & authorizes a cookie for access to an org by extenal ID.
    rpc LookupOrg(LookupOrgRequest) returns (LookupOrgResponse) {};

    // LookupUsingToken authenticates & authorizes a token for access to an org.
    rpc LookupUsingToken(LookupUsingTokenRequest) returns (LookupUsingTokenResponse) {};

    // LookupAdmin authenticates & authorizes a cookie for admin access.
    rpc LookupAdmin(LookupAdminRequest) returns (LookupAdminResponse) {};

    // LookupUser authenticates a cookie.
    rpc LookupUser(LookupUserRequest) returns (LookupUserResponse) {};

    rpc GetOrganizations(GetOrganizationsRequest) returns (GetOrganizationsResponse) {};
}

message LookupOrgRequest {
    string Cookie = 1;
    string OrgExternalID = 2;
}

message LookupOrgResponse {
    string OrganizationID = 1 [(gogoproto.jsontag) = "organizationID,omitempty"];
    string UserID = 2 [(gogoproto.jsontag) = "userID,omitempty"];
    repeated string FeatureFlags = 3 [(gogoproto.jsontag) = "featureFlags,omitempty"];
}

message LookupUsingTokenRequest {
    string Token = 1;
}

message LookupUsingTokenResponse {
    string OrganizationID = 1 [(gogoproto.jsontag) = "organizationID,omitempty"];
    repeated string FeatureFlags = 2 [(gogoproto.jsontag) = "featureFlags,omitempty"];
}

message LookupAdminRequest {
    string Cookie = 1;
}

message LookupAdminResponse {
    string AdminID = 1 [(gogoproto.jsontag) = "adminID,omitempty"];
}

message LookupUserRequest {
    string Cookie = 1;
}

message LookupUserResponse {
    string UserID = 1 [(gogoproto.jsontag) = "userID,omitempty"];
}

message GetOrganizationsRequest {
}

message GetOrganizationsResponse {
    repeated Organization Organizations = 1 [(gogoproto.nullable) = false];
}

message Organization {
    string ID = 1;
    string ExternalID = 2;
    string Name = 3;
    string ProbeToken = 4;
    google.protobuf.Timestamp CreatedAt = 5 [(gogoproto.stdtime) = true, (gogoproto.nullable) = false];
    repeated string FeatureFlags = 6;
}
